--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.1.0",
+    "firebase-admin": "^11.10.1",
     "lottie-react": "^2.4.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
