--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-image-crop": "^8.6.12",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
