--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
     "lottie-react": "^2.4.0",
