--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/press-start-2p": "^5.0.7",
-    "@fontsource/roboto": "^5.0.5",
+    "@fontsource/press-start-2p": "^5.0.8",
+    "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.1",
+    "@mui/material": "^5.14.4",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/system": "^5.14.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.18.2",
     "firebase": "^10.1.0",
+    "firebase-admin": "^11.10.1",
     "lottie-react": "^2.4.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
