--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
     "lottie-react": "^2.4.0",
+    "node-cron": "^3.0.2",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
