--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -58,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "nodemon": "^3.0.1",
     "tailwindcss": "^3.3.3"
   }
