--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 /src/config/serviceAccount.json
-/src/components/firebase.js
+/src/firebase.js
 # dependencies
 /node_modules
 /.pnp
